syntax="proto3";

package feedback;

option go_package = "goblog.com/service/usertag/proto;proto";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

message Feedback {
  int64 id = 1;
  int64 user_id = 2;
  string content = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message FeedbackId {
  int64 id = 1;
}

message RowsAffected {
  int64 rows_affected = 1;
}

message CreateFeedback {
  int64 user_id = 1  [(validate.rules).int64.gt = 0];
  string content = 2 [(validate.rules).string = {min_len: 1, max_len: 255}];
}

message ListRequest {
  int64 user_id = 1;
  int64 page = 2;
  int64 per_page = 3;
}

message ListResponse {
  int64 total = 1;
  int64 per_page = 2;
  int64 current_page = 3;
  int64 last_page = 4;
  int64 from = 5;
  int64 to = 6;
  repeated Feedback data = 7;
}

service FeedbackService {
  rpc Create(CreateFeedback) returns (FeedbackId) {
    option (google.api.http) = {
      post: "/v1/feedbacks"
      body: "*"
    };
  }

  rpc Delete(FeedbackId) returns (RowsAffected) {
    option (google.api.http) = {
      delete: "/v1/feedbacks/{id}"
    };
  }

  rpc List(ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/v1/feedbacks"
    };
  }
}